[package]
name = "cmder"
version = "1.0.0-beta-1"
edition = "2021"
description="A simple, lightweight, command line argument parser for rust codebases"
repository="https://github.com/ndaba1/cmder.git"
documentation = "https://docs.rs/cmder/"
categories = ["command-line-interface"]
license="MIT"
keywords = [
	"cli",
	"argument-parser",
	"cmder",
	"command-line-parser",
	"commander"
]
exclude = [
    ".github"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.2"

[dev-dependencies]
criterion = {version = "0.3.5", features = ["html_reports"]}

[[example]]
name = "echo"

[[example]]
name = "custom_theme"

[[example]]
name = "basic_usage"

[[example]]
name = "subcommands"

[[example]]
name = "listeners"

[[bench]]
name = "1_default"
harness = false
path = "benches/1_default.rs"

[[bench]]
name = "2_basic"
harness = false
path = "benches/2_basic.rs"

[[bench]]
name = "3_standard"
harness = false
path = "benches/3_standard.rs"

[[bench]]
name = "inception"
harness = false